cleaned up about me section

--- a/index.html
+++ b/index.html
@@ -192,9 +192,8 @@
             <h4>
               <strong>CSS</strong>
             </h4>
-            <p class="text-faded mb-0">Keyframes, SASS &amp; More!
-             
-          </p></div>
+            <p class="text-faded mb-0">Keyframes, SASS &amp; More!</p>
+          </div>
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fab fa-js-square"></i>
@@ -262,7 +261,7 @@
 
           I am a dedicated, passionate, and motivated Web Developer who loves utilizing my creativity and skills to ensure the best outcome possible.<br>
 
-          In addition to the skills I learned at the bootcamp, apprenticeship, and internship being a single mom has taught me to multitask, persevere, to be a  great manager, to seek different solutions, to be able to perform under pressure, to be flexible and open to new ideas. But most of all have fun and enjoy every project I do.<br> 
+          In addition to the skills I have learned as a software engineer. Being a single mom has taught me to multitask, persevere, to seek different solutions, to be able to perform under pressure, to be flexible and open to new ideas. But most of all have fun and enjoy every project I do.<br> 
 
           Now I’m looking to work for a mission-driven company where I can make an impact and develop my skills even more. I look forward to joining your team.
          </p>
