--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">NOEMI</h1>
-        <h2 class="mx-auto mt-2 mb-5" style="color: rgba(255, 255, 255, .8);">Determined, Creative and Enthusiastic Software Engineer</h2>
+        <h2 class="mx-auto mt-2 mb-5" style="color: rgba(255, 255, 255, .8);">Determined, Creative and Enthusiastic <br>Software Engineer</h2>
         <a href="#projects" class="btn btn-primary js-scroll-trigger">Projects</a>
       </div>
     </div>
@@ -75,7 +75,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <a href="https://charoshairdesignandspa.com/">Charos Hair Design and Spa</a>
+                <a href="https://charoshairdesignandspa.com/">Charo's Hair Design and Spa</a>
                 <p class="mb-0 text-white-50">Responsive, mobile friendly website. Built using Bootstrap, HTML, Javascript, and CSS</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -94,7 +94,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <a href="https://noemir.github.io/Nail-Salon/">Nancys Nail</a>
+                <a href="https://noemir.github.io/Nail-Salon/">Nail Salon</a>
                 <p class="mb-0 text-white-50">Mobile friendly website with logo. Built using Bootstrap, HTML, Javascript, and CSS</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -132,7 +132,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <a href="https://mykanvas.herokuapp.com/auth/home">Mykanvas</a>
-                <p class="mb-0 text-white-50">Interactive website that allows you to create your own story through your favorite pictures. Built using Express, Node.js, MongoDB, HTML, and CSS</p>
+                <p class="mb-0 text-white-50">Interactive website, user friedly, with login and registration credentials . Built using Express, Node.js, MongoDB, HTML, and CSS</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -150,7 +150,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <a href="https://food-pantry-management.herokuapp.com/">Food Pantry Management</a>
-                <p class="mb-0 text-white-50">Intake management system that helps food pantries manage family registration, pickups and schedules in one place. Built using Sinatra, Postgresql, and ReactJS</p>
+                <p class="mb-0 text-white-50">Interactive website with built in organization system for schedules, registrations, and events. Built using Sinatra, Postgresql, and ReactJS</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -250,18 +250,18 @@
 
   <!-- About Section -->
   <section id="about" class="about-section text-center">
-    <div class="container">
+    <div class="container" style="padding-top: 45px;">
       <div class="row" style="padding-top: 45px;">
         <div class="col-lg-8 mx-auto">
           <img src="img/smile.jpg" class="img-fluid" alt="" style="height: 300px; border-radius: 200px; color: #64a09c;">
           <h2 class="mb-4" style="color: #64a09c;">About Me</h2>
-          <p style="color: #64a09c;">My name is Noemi Romero. I am a dreamer, a fighter, a seeker and a mom.<br>
+          <p style="color: #64a09c; text-align:justify; font-size: 1.2rem;">My name is Noemi Romero. I am a dreamer, a fighter, a seeker and a mom.<br>
 
-          In Spring of 2018, I took the Web Development Immersive Bootcamp at General Assembly. I went from being a nanny to coding full-time. <br>
+          In Spring of 2018, I took the Web Development Immersive Bootcamp at General Assembly. I went from being a nanny to coding full-time. 
 
-          I am a dedicated, passionate, and motivated Web Developer who loves utilizing my creativity and skills to ensure the best outcome possible.<br>
+          I am a dedicated, passionate, and motivated Web Developer who loves utilizing my creativity and skills to ensure the best outcome possible.<br><br>
 
-          In addition to the skills I have learned as a software engineer. Being a single mom has taught me to multitask, persevere, to seek different solutions, to be able to perform under pressure, to be flexible and open to new ideas. But most of all have fun and enjoy every project I do.<br> 
+          In addition to the skills, I have learned as a software engineer. Being a single mom has taught me to multitask, persevere, to seek different solutions, to be able to perform under pressure, to be flexible and open to new ideas. But most of all have fun and enjoy every project I do.<br><br>
 
           Now I’m looking to work for a mission-driven company where I can make an impact and develop my skills even more. I look forward to joining your team.
          </p>
