--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/mylogo.jpg" style="max-height: 60px;"></a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/whitelogo.png" style="max-height: 60px;"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -88,7 +88,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters" style="margin-bottom: 2rem;">
         <div class="col-xl-8 col-lg-8">
-          <a href="https://noemir.github.io/Nail-Salon/"><img class="img-fluid" src="img/nailssalon.png" alt=""></a>
+          <a href="https://noemir.github.io/Nail-Salon/"><img class="img-fluid" src="img/purple.png" alt=""></a>
         </div>
         <div class="col-xl-4 col-lg-4">
           <div class="bg-black text-center h-100 project">
@@ -127,7 +127,7 @@
         <div class="col-xl-8 col-lg-8">
           <a href="https://mykanvas.herokuapp.com/auth/home"><img class="img-fluid" src="img/canvas.png" alt=""></a>
         </div>
-        <div class="col-xl-4 col-lg-4 order-lg-first">
+        <div class="col-xl-4 col-lg-4">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
@@ -145,7 +145,7 @@
         <div class="col-xl-8 col-lg-8">
           <img class="img-fluid" src="img/schedule.jpg" alt="">
         </div>
-        <div class="col-xl-4 col-lg-4">
+        <div class="col-xl-4 col-lg-4 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
