removed space in about me paragraph

--- a/index.html
+++ b/index.html
@@ -255,11 +255,7 @@
         <div class="col-lg-8 mx-auto">
           <img src="img/smile.jpg" class="img-fluid" alt="" style="height: 300px; border-radius: 200px; color: #64a09c;">
           <h2 class="mb-4" style="color: #64a09c;">About Me</h2>
-          <p style="color: #64a09c; text-align:justify; font-size: 1.2rem;">My name is Noemi Romero. I am a dreamer, a fighter, a seeker and a mom.<br>
-
-          In Spring of 2018, I took the Web Development Immersive Bootcamp at General Assembly. I went from being a nanny to coding full-time. 
-
-          I am a dedicated, passionate, and motivated Web Developer who loves utilizing my creativity and skills to ensure the best outcome possible.<br><br>
+          <p style="color: #64a09c; text-align:justify; font-size: 1.2rem;">My name is Noemi Romero. I am a dreamer, a fighter, a seeker and a mom. In Spring of 2018, I took the Web Development Immersive Bootcamp at General Assembly. I went from being a nanny to coding full-time. I am a dedicated, passionate, and motivated Web Developer who loves utilizing my creativity and skills to ensure the best outcome possible.<br><br>
 
           In addition to the skills, I have learned as a software engineer. Being a single mom has taught me to multitask, persevere, to seek different solutions, to be able to perform under pressure, to be flexible and open to new ideas. But most of all have fun and enjoy every project I do.<br><br>
 
