--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">NOEMI</h1>
-        <h2 class="mx-auto mt-2 mb-5" style="color: rgba(255, 255, 255, .8);">Determined, Creative and Enthusiastic <br>Software Engineer</h2>
-        <a href="#projects" class="btn btn-primary js-scroll-trigger">Projects</a>
+        <h1 class="mx-auto my-0 text-uppercase">Welcome </h1>
+        <h2 class="mx-auto mt-2 mb-5" style="color: rgba(255, 255, 255, .8);">My name is Noemi<br> I am a Determined, Creative and Enthusiastic <br>Front-End Software Engineer</h2>
+        <a href="#projects" class="btn btn-primary js-scroll-trigger">My Projects</a>
       </div>
     </div>
   </header>
